--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "postcss": "^8.4.0",
     "react": "^19",
     "react-dom": "^19",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
