--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.5",
+    "@next/third-parties": "15.2.4",
     "autoprefixer": "^10.4.0",
     "axios": "^1.13.2",
     "cloudinary": "^2.8.0",
